Layout cleanup for video player (Bug 796049) Responsive layout for video overlay, make the loading progress bar visible again

--- a/media/css/home.less
+++ b/media/css/home.less
@@ -383,7 +383,7 @@
             cursor: pointer;
             margin-top: 40px;
             .inline-block;
-            padding: 50px 10px 10px 10px;
+            padding: 40px 10px 10px 10px;
             position: relative;
             color: #ccc;
             &:after {
@@ -726,6 +726,22 @@
                 font-size: 18px;
                 width: auto;
                 float: none;
+            }
+        }
+        #promo-flicks-overlay {
+            .video-visit {
+                margin-top: 10px;
+                margin-bottom: 10px;
+                font-size: 18px;
+                .open-sans-light;
+            }
+
+            .share-links {
+                margin-bottom: 5px;
+            }
+
+            .video-replay {
+                margin-top: 10px;
             }
         }
     }
